hphp/test/zend/good/ext/xmlwriter/tests/010.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("xmlwriter")) die("skip");
}
