hphp/test/zend/bad/ext/standard/tests/general_functions/ini_get_all.php.skipif
<?php if (!extension_loaded("reflection")) die("skip"); ?>